Minor notebook fixes

--- a/analytics.ipynb
+++ b/analytics.ipynb
@@ -905,14 +905,32 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'dresultsf_salary_fake' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-17960224a89b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0mdf_salary_fake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbigram\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf_salary_fake\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mdf_salary_fake\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrigram\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdresultsf_salary_fake\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'dresultsf_salary_fake' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 most popular bi-grams for for fake job postings and their respective frequencies:\n",
+      "('of the', 488)\n",
+      "('in the', 407)\n",
+      "('looking for', 338)\n",
+      "('to the', 308)\n",
+      "('for the', 285)\n",
+      "('to work', 275)\n",
+      "('we are', 272)\n",
+      "('in a', 231)\n",
+      "('are looking', 231)\n",
+      "('with the', 228)\n",
+      "\n",
+      "10 most popular tri-grams for for fake job postings and their respective frequencies:\n",
+      "('are looking for', 194)\n",
+      "('oil and gas', 141)\n",
+      "('looking for a', 113)\n",
+      "('and gas industry', 110)\n",
+      "('we are looking', 97)\n",
+      "('be responsible for', 84)\n",
+      "('as well as', 71)\n",
+      "('solutions is a', 71)\n",
+      "('be able to', 70)\n",
+      "('to the oil', 62)\n"
      ]
     }
    ],
@@ -927,7 +945,7 @@
     "\n",
     "df_salary_fake = bigram.transform(df_salary_fake)\n",
     "\n",
-    "df_salary_fake = trigram.transform(dresultsf_salary_fake)\n",
+    "df_salary_fake = trigram.transform(df_salary_fake)\n",
     "\n",
     "\n",
     "exploded = df_salary_fake.select(F.explode(df_salary_fake['bi-grams']).alias('n-grams'))\n",
@@ -954,9 +972,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 most popular bi-grams for for real job postings and their respective frequencies:\n",
+      "('of the', 10351)\n",
+      "('in the', 9124)\n",
+      "('will be', 8738)\n",
+      "('you will', 6704)\n",
+      "('looking for', 6625)\n",
+      "('we are', 5555)\n",
+      "('in a', 5384)\n",
+      "('is a', 5183)\n",
+      "('to the', 5091)\n",
+      "('for the', 5011)\n",
+      "\n",
+      "10 most popular tri-grams for for real job postings and their respective frequencies:\n",
+      "('are looking for', 3022)\n",
+      "('looking for a', 2693)\n",
+      "('you will be', 2353)\n",
+      "('as well as', 2280)\n",
+      "('we are looking', 2000)\n",
+      "('be responsible for', 1631)\n",
+      "('to join our', 1599)\n",
+      "('be able to', 1546)\n",
+      "('will be responsible', 1416)\n",
+      "('the ability to', 1242)\n"
+     ]
+    }
+   ],
    "source": [
     "df_salary_real = df_salary_real.withColumn('description', toLowerCase(df_salary_real.description))\n",
     "\n",
