Minor presentation fix

--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -912,7 +912,8 @@
     "6. Decision Trees with Boosting through AdaBoost-SAME classifier\n",
     "7. Stochastic Gradient Descent\n",
     "8. Stochastic Gradient Descent with Bagging through BaggingClassifier\n",
-    "9. Stochastic Gradient Descent with Boosting through AdaBoost-SAME classifier"
+    "9. Stochastic Gradient Descent with Boosting through AdaBoost-SAME classifier\n",
+    "10. A custom simple sequential deep learning model"
    ]
   },
   {
