--- a/machine_learning.ipynb
+++ b/machine_learning.ipynb
@@ -684,17 +684,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df['company_profile'].notnull()\n",
-    "# if df['company_profile'][17878] is np.nan:\n",
-    "#     print(df['company_profile'][17878],type(df['company_profile'][17878]),np.nan)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -755,7 +744,7 @@
     "            tokens = np.setdiff1d(np.asarray(tokens), np.asarray(stopwords))\n",
     "            text = ' '.join(tokens)\n",
     "        \n",
-    "    if not (not text):\n",
+    "    if text:\n",
     "        return text\n",
     "        \n",
     "    return 'empty'\n",
